--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "open": "^10.1.0",
+    "url": "^0.11.4"
   }
 }
